...
    val idioma: Idioma,
    val nivel: Nivel,
    val categoria: Categoria,
    val topicId: String,
    val titulo: String,
    val subtitulo: String,
    val ancla: String? = null,
    val challengeType: ChallengeType,
    val bilingue: Boolean = false,
    val evidencia: Evidencia,
    val descripcion: String,
    val cuadroReferencia: CuadroReferencia? = null,
    val ejemplos: List<Ejemplo>,
...
